only some simple refactorings suggested by the netbeans ide